--- a/src/assets/stylesheet/house.css
+++ b/src/assets/stylesheet/house.css
@@ -28,8 +28,8 @@
 }
 
 .btn {
-  background-color: #ffee00;
-  border: 2px solid #ffee00;
+  background-color: #fe0;
+  border: 2px solid #fe0;
 }
 
 .btn-success {
