--- a/src/assets/stylesheet/nav.css
+++ b/src/assets/stylesheet/nav.css
@@ -16,7 +16,7 @@
 }
 
 .hamburger span {
-  background-color: #ff3d00;
+  background-color: #037952;
   height: 4px;
   margin-bottom: 5px;
   width: 35px;
@@ -47,7 +47,7 @@
 }
 
 .navi {
-  color: #ff3d00;
+  color: #049929;
   font-size: 20px;
 }
 
